--- a/package.json
+++ b/package.json
@@ -1,21 +1,20 @@
 {
   "name": "tailwind-layout-react",
-  "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "scripts": {
     "dev": "vite --port 8848",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "autoprefixer": "^10.4.7",
-    "classnames": "^2.3.1",
-    "postcss": "^8.4.13",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "tailwindcss": "^3.0.24"
+    "classnames": "^2.3.1"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.13",
+    "tailwindcss": "^3.0.24",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
