--- a/package.json
+++ b/package.json
@@ -4,20 +4,23 @@
   "scripts": {
     "dev": "vite --port 8848",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "changeset": "changeset",
+    "release": "changeset publish"
   },
   "dependencies": {
     "classnames": "^2.3.1"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.7",
-    "postcss": "^8.4.13",
-    "tailwindcss": "^3.0.24",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
+    "autoprefixer": "^10.4.7",
+    "changeset": "^0.2.6",
+    "postcss": "^8.4.13",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "tailwindcss": "^3.0.24",
     "typescript": "^4.6.3",
     "vite": "^2.9.7"
   }
