chore: finish ci workflow

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -4,8 +4,8 @@
 name: Node.js Package
 
 on:
-  release:
-    types: [created]
+  push:
+    branches: main
 
 jobs:
   build:
@@ -14,27 +14,27 @@ jobs:
       - name: checkout code repository
         uses: actions/checkout@v3
         with:
-            fetch-depth: 0
-            
+          fetch-depth: 0
+
       - name: setup node.js
         uses: actions/setup-node@v3
         with:
-            node-version: 15.x
-            
+          node-version: 15.x
+
       - name: setup pnpm
         uses: pnpm/action-setup@v2.2.1
         with:
-            version: latest
-            run_install: true
-      
+          version: latest
+          run_install: true
+
       - name: build packages
         run: pnpm build
 
       - name: create versions or publish to npm registry
         uses: changesets/action@v1
         with:
-            publish: pnpm release
-            commit: 'ci(changeset): release tailwind-layout-react'
+          publish: pnpm release
+          commit: 'ci(changeset): release tailwind-layout-react'
         env:
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
