--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "classnames": "^2.3.1"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.22.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
