--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "changeset": "changeset",
-    "release": "changeset publish"
+    "ci:version": "changeset version",
+    "ci:publish": "changeset publish"
   },
   "dependencies": {
     "classnames": "^2.3.1"
@@ -24,5 +25,14 @@
     "tailwindcss": "^3.0.24",
     "typescript": "^4.6.3",
     "vite": "^2.9.7"
+  },
+  "files": ["dist"],
+  "main": "./dist/tailwind-layout-react.umd.js",
+  "module": "./dist/tailwind-layout-react.es.js",
+  "exports": {
+    ".": {
+      "import": "./dist/tailwind-layout-react.es.js",
+      "require": "./dist/tailwind-layout-react.umd.js"
+    }
   }
 }
