chore: ci workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,6 +43,8 @@ jobs:
 
       - name: build packages
         run: pnpm build
+
+      - name: create versions or publish to npm registry
         run: pnpm publish
 
       # - name: create versions or publish to npm registry
