--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,7 +45,7 @@ jobs:
         run: pnpm build
 
       - name: create versions or publish to npm registry
-        run: pnpm publish
+        run: pnpm publish --no-git-checks
 
       # - name: create versions or publish to npm registry
       #   uses: changesets/action@v1
