--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,58 +1,39 @@
-# This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
-# For more information see: https://help.github.com/actions/language-and-framework-guides/publishing-nodejs-packages
-
-name: Node.js Package
-
+name: Changesets
 on:
   push:
-    branches: main
-
+    branches:
+      - main
 env:
   CI: true
   PNPM_CACHE_FOLDER: .pnpm-store
-
 jobs:
   version:
+    timeout-minutes: 15
     runs-on: ubuntu-latest
     steps:
       - name: checkout code repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
         with:
           fetch-depth: 0
-
       - name: setup node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v2
         with:
-          node-version: 15.x
-
-      - name: load cache
-        uses: actions/cache@v3
-        with:
-            path: |
-                ~/.pnpm-store
-            key: ${{ runner.os }}-${{ hashFiles('**/pnpm-lock.yaml') }}
-            restore-keys: |
-                ${{ runner.os }}
-      - uses: pnpm/action-setup@v2.2.1
-        with:
-          version: latest
-          run_install: true
-
+          node-version: 14
+      - name: install pnpm
+        run: npm i pnpm@latest -g
       - name: Setup npmrc
         run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > .npmrc
-
-      - name: build packages
-        run: pnpm build
-
-      - name: create versions or publish to npm registry
-
-      # - name: create versions or publish to npm registry
-      #   uses: changesets/action@v1
-      #   with:
-      #     version: pnpm ci:version
-      #     commit: 'ci(changeset): release tailwind-layout-react'
-      #     publish: pnpm ci:publish
+      - name: setup pnpm config
+        run: pnpm config set store-dir $PNPM_CACHE_FOLDER
+      - name: install dependencies
+        run: pnpm install
+      - name: create and publish versions
+        uses: changesets/action@master
+        with:
+          version: pnpm ci:version
+          commit: "chore: update versions"
+          title: "chore: update versions"
+          publish: pnpm ci:publish
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: pnpm publish --no-git-checks
