--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tailwind-layout-react",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "scripts": {
     "dev": "vite --port 8848",
     "build": "tsc && vite build",
@@ -26,7 +26,9 @@
     "typescript": "^4.6.3",
     "vite": "^2.9.7"
   },
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "main": "./dist/tailwind-layout-react.umd.js",
   "module": "./dist/tailwind-layout-react.es.js",
   "exports": {
