--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,6 @@
   "tabWidth": 2,
   "printWidth": 120,
   "singleQuote": true,
-  "trailingComma": "es5"
+  "trailingComma": "all",
+  "semi": true
 }
