--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "ci:publish": "changeset publish"
   },
   "dependencies": {
-    "classnames": "^2.3.1"
+    "@commitlint/cli": "^17.0.1",
+    "@commitlint/config-conventional": "^17.0.0",
+    "classnames": "^2.3.1",
+    "husky": "^8.0.1"
   },
   "devDependencies": {
     "@changesets/cli": "^2.22.0",
