--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "tailwind-layout-react",
   "version": "0.0.10",
   "license": "MIT",
+  "private": true,
+  "engines": {
+    "node": ">=12",
+    "pnpm": ">=7"
+  },
   "scripts": {
     "dev": "vite --port 8848",
     "build": "tsc && vite build",
@@ -10,13 +15,11 @@
     "ci:version": "changeset version",
     "ci:publish": "changeset publish"
   },
-  "dependencies": {
+  "devDependencies": {
     "@commitlint/cli": "^17.0.1",
     "@commitlint/config-conventional": "^17.0.0",
     "classnames": "^2.3.1",
-    "husky": "^8.0.1"
-  },
-  "devDependencies": {
+    "husky": "^8.0.1",
     "@changesets/cli": "^2.22.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
