--- a/package.json
+++ b/package.json
@@ -8,30 +8,40 @@
     "pnpm": ">=7"
   },
   "scripts": {
+    "postinstall": "husky install",
+    "format": "lint-staged",
     "dev": "vite --port 8848",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "changeset": "changeset",
     "ci:version": "changeset version",
-    "ci:publish": "changeset publish"
+    "ci:publish": "changeset publish",
+    "commit": "git-cz"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.22.0",
     "@commitlint/cli": "^17.0.1",
     "@commitlint/config-conventional": "^17.0.0",
-    "classnames": "^2.3.1",
-    "husky": "^8.0.1",
-    "@changesets/cli": "^2.22.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.26.0",
+    "@typescript-eslint/parser": "^5.26.0",
     "@vitejs/plugin-react": "^1.3.0",
     "autoprefixer": "^10.4.7",
     "changeset": "^0.2.6",
+    "classnames": "^2.3.1",
+    "concurrently": "^7.0.0",
+    "eslint": "^8.16.0",
+    "git-cz": "^4.9.0",
+    "husky": "^8.0.1",
+    "lint-staged": "^12.4.2",
     "postcss": "^8.4.13",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "tailwindcss": "^3.0.24",
     "typescript": "^4.6.3",
-    "vite": "^2.9.7"
+    "vite": "^2.9.7",
+    "vitest": "^0.12.9"
   },
   "files": [
     "dist",
