--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
 {
-  "tabWidth": 2,
-  "printWidth": 120,
-  "singleQuote": true,
+  "semi": true,
   "trailingComma": "all",
-  "semi": true
+  "singleQuote": true,
+  "printWidth": 120,
+  "tabWidth": 2
 }
