--- a/package.json
+++ b/package.json
@@ -7,41 +7,59 @@
     "node": ">=12",
     "pnpm": ">=7"
   },
+  "type": "module",
   "scripts": {
     "postinstall": "husky install",
     "format": "lint-staged",
     "dev": "vite --port 8848",
     "build": "tsc && vite build",
     "preview": "vite preview",
+    "test": "pnpm test:lint && pnpm test:unit",
+    "test:unit": "vitest",
+    "test:lint": "eslint \"**/{src}/**/*.{js,ts,tsx}\"",
     "changeset": "changeset",
     "ci:version": "changeset version",
     "ci:publish": "changeset publish",
+    "clear": "rimraf 'packages/*/{lib,tsconfig.tsbuildinfo,node_modules,.rollup.cache}' && rimraf node_modules",
     "commit": "git-cz"
   },
   "devDependencies": {
     "@changesets/cli": "^2.22.0",
     "@commitlint/cli": "^17.0.1",
     "@commitlint/config-conventional": "^17.0.0",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
+    "@types/node": "^17.0.36",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.5",
     "@typescript-eslint/eslint-plugin": "^5.26.0",
     "@typescript-eslint/parser": "^5.26.0",
-    "@vitejs/plugin-react": "^1.3.0",
+    "@vitejs/plugin-react": "^1.3.2",
     "autoprefixer": "^10.4.7",
     "changeset": "^0.2.6",
     "classnames": "^2.3.1",
-    "concurrently": "^7.0.0",
+    "concurrently": "^7.2.1",
     "eslint": "^8.16.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-header": "^3.1.1",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react-hooks": "^4.5.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "eslint-plugin-tsdoc": "^0.2.16",
     "git-cz": "^4.9.0",
     "husky": "^8.0.1",
     "lint-staged": "^12.4.2",
-    "postcss": "^8.4.13",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "postcss": "^8.4.14",
+    "prettier": "^2.6.2",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.75.1",
+    "rollup-plugin-auto-external": "^2.0.0",
     "tailwindcss": "^3.0.24",
-    "typescript": "^4.6.3",
-    "vite": "^2.9.7",
-    "vitest": "^0.12.9"
+    "typescript": "^4.7.2",
+    "vite": "^2.9.9",
+    "vitest": "^0.13.0"
   },
   "files": [
     "dist",
