--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "dev": "vite --port 8848",
     "build": "tsc && vite build",
     "preview": "vite preview",
+    "watch": "pnpm --filter=./packages --parallel run start",
+    "doc": "pnpm --filter=@tailwind-layout-react/gh-pages run dev",
     "test": "pnpm test:lint && pnpm test:unit",
     "test:unit": "vitest",
     "test:lint": "eslint \"**/{src}/**/*.{js,ts,tsx}\"",
+    "build:doc": "pnpm --filter=@tailwind-layout-react/gh-pages run build",
     "changeset": "changeset",
     "ci:version": "changeset version",
     "ci:publish": "changeset publish",
@@ -59,7 +62,12 @@
     "tailwindcss": "^3.0.24",
     "typescript": "^4.7.2",
     "vite": "^2.9.9",
-    "vitest": "^0.13.0"
+    "vitest": "^0.13.0",
+    "nx": "14.1.9",
+    "@nrwl/cli": "latest",
+    "@nrwl/tao": "latest",
+    "@nrwl/workspace": "latest",
+    "@nrwl/nx-cloud": "latest"
   },
   "files": [
     "dist",
