--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -7,7 +7,7 @@
   "types": "./lib/index.d.ts",
   "license": "MIT",
   "scripts": {
-    "start": "vite",
+    "start": "concurrently -n es,dts \"vite build --watch\"  \"tsc --emitDeclarationOnly --watch\"",
     "test": "vitest",
     "tsc": "tsc --noEmit && echo",
     "build": "tsc --emitDeclarationOnly && vite build"
