fix: fix the ts error cannot use jsx

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -5,6 +5,8 @@
       "lib": ["dom", "es2017", "es2018", "es2019"],
       "noEmitOnError": true,
 
+      "jsx": "react",
+
       "declaration": true,
       "declarationMap": true,
       "sourceMap": true,
