--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test": "pnpm test:lint && pnpm test:unit",
     "test:unit": "vitest",
     "test:lint": "eslint \"**/{src}/**/*.{js,ts,tsx}\"",
-    "build:packs": "pnpm --filter=@tailwind-layout-react/* run build",
+    "build:packs": "pnpm --filter './packages/**' run build",
     "build:doc": "pnpm --filter=@tailwind-layout-react/gh-pages run build",
     "build:cache": "nx run-many --target=build --all --parallel",
     "build:affected": "nx affected --target=build",
