--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "build:cache": "nx run-many --target=build --all --parallel",
     "build:affected": "nx affected --target=build",
     "graph": "nx dep-graph",
-    "clear": "rimraf 'packages/*/{lib,tsconfig.tsbuildinfo,node_modules,.rollup.cache}' && rimraf node_modules && rimraf '/*/.next'",
+    "clear": "rimraf 'packages/*/{lib,tsconfig.tsbuildinfo,node_modules,.rollup.cache}' && rimraf node_modules",
     "changeset": "changeset",
     "release": "changeset publish",
     "commit": "git-cz"
