--- a/gh-pages/package.json
+++ b/gh-pages/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "my-app",
-  "version": "0.1.0",
+  "name": "@tailwind-layout-react/gh-pages",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "PORT=8848 next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "PORT=8848 next start",
     "lint": "next lint"
   },
   "dependencies": {
