--- a/gh-pages/package.json
+++ b/gh-pages/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "PORT=8848 next dev",
     "build": "next build",
-    "start": "PORT=8848 next start",
+    "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
