--- a/gh-pages/package.json
+++ b/gh-pages/package.json
@@ -13,6 +13,7 @@
     "postcss": "^8.4.14",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "tailwind-layout-react": "workspace:*",
     "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
