--- a/packages/frame/package.json
+++ b/packages/frame/package.json
@@ -20,7 +20,10 @@
     "tailwindcss",
     "react",
     "ui",
-    "layout"
+    "layout",
+    "flex",
+    "grid",
+    "frame"
   ],
   "dependencies": {
     "@tailwind-layout-react/utils": "workspace:*"
