feat: 🎸 update packages export types

--- a/packages/tailwind-layout-react/package.json
+++ b/packages/tailwind-layout-react/package.json
@@ -26,6 +26,7 @@
     "frame"
   ],
   "dependencies": {
+    "@tailwind-layout-react/flex": "workspace:*",
     "@tailwind-layout-react/frame": "workspace:*",
     "@tailwind-layout-react/text": "workspace:*",
     "@tailwind-layout-react/utils": "workspace:*"
