--- a/gh-pages/package.json
+++ b/gh-pages/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.6.4",
+    "@heroicons/react": "^1.0.6",
     "next": "12.1.6",
     "postcss": "^8.4.14",
     "react": "^18.1.0",
